# tio-browse

./: .clang-format  .clang-format.txt  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: FindTyphonIO.cmake
data/: 3d_point_v1.h5  CMakeLists.txt  ex_colinear_mesh.cpp  ex_interface_mesh.cpp  ex_noncolinear_mesh.cpp  ex_noncolinear_mesh.h5  ex_unstructured_mesh.cpp  ex_vargroup.cpp  ex_vargroup.h5  tio_generator.C  tio_generator_data.h
docs/: CMakeLists.txt  Doxyfile.in  introduction.dox  mainpage.dox  running.dox
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AboutInfo.cpp  AboutInfo.h  CMakeLists.txt  ConvTIOtoPyTypes.cpp  ConvTIOtoPyTypes.h  DataArray.cpp  DataArray.h  DataDialog.cpp  DataDialog.h  DataDialog.ui  DataTableModel.cpp  DataTableModel.h  ErrorDialog.cpp  ErrorDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowMediator.cpp  MainWindowMediator.h  TIODataItem.cpp  TIODataItem.h  TIOException.cpp  TIOException.h  TIOFile.cpp  TIOFile.h  TIOInfoGroup.cpp  TIOInfoGroup.h  TIOInfoItem.cpp  TIOInfoItem.h  TIOInterface.cpp  TIOInterface.h  TIOInterfaceGroup.cpp  TIOInterfaceGroup.h  TIOMaterial.cpp  TIOMaterial.h  TIOMaterialChunk.cpp  TIOMaterialChunk.h  (+36 more)
test/: AboutInfo_test.cpp  CMakeLists.txt  DataArray_test.cpp  DataDialog_test.cpp  DataTableModel_test.cpp  MainWindowMediator_test.cpp  MainWindowTestDouble.cpp  MainWindowTestDouble.h  MockTIOTreeItem.h  TIOFile_test.cpp  TIOInterfaceGroup_test.cpp  TIOInterface_test.cpp  TIOMaterialChunkGroup_test.cpp  TIOMaterialChunk_test.cpp  TIOMaterial_test.cpp  TIOMeshChunkGroup_test.cpp  TIOMeshChunk_test.cpp  TIOMesh_test.cpp  TIOPolygon_test.cpp  TIOQuantChunkGroup_test.cpp  TIOQuantChunk_test.cpp  TIOQuantGroup_test.cpp  TIOQuant_test.cpp  TIOState_test.cpp  TIOTreeItemTestFixture.cpp  TIOTreeItemTestFixture.h  TIOTreeItem_test.cpp  TIOTreeModel_test.cpp  TIOVargroup_test.cpp  TIOVariable_test.cpp  test-runner-qt.cpp  test-runner.cpp  test_runner.cpp  test_runner_qt.cpp
test/data/: 3d_chunk_v1.h5  CMakeLists.txt  ex_colinear_mesh.h5  ex_unstructured_mesh.h5
